--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "sonar": "node sonar-project.js"
+    "sonar": "node sonar-project.js",
+    "test": "jest . --forceExit --runInBand"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,5 +18,9 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
     "sonarqube-scanner": "^2.8.0"
+  },
+  "devDependencies": {
+    "jest": "^27.0.3",
+    "supertest": "^6.1.3"
   }
 }
