--- a/nodejs/values.yaml
+++ b/nodejs/values.yaml
@@ -2,14 +2,26 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 3
+replicaCount: 1
 
 image:
   repository: sammydockerhub123/nodeserver
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
-
+  tag: "1.3.0"
+  readinessProbe:
+    httpGet:
+      path: /ready
+      port: 3000
+    initialDelaySeconds: 3
+    periodSeconds: 5
+  livenessProbe:
+    httpGet:
+      path: /live
+      port: 3000
+    initialDelaySeconds: 40
+    periodSeconds: 10
+    
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
