--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "testcafe-edge": "testcafe edge tests"
   },
   "dependencies": {
+    "@cloudnative/health-connect": "^2.1.0",
+    "appmetrics-prometheus": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
